--- a/src/UltimaIII.Avalonia/Views/InventoryView.axaml
+++ b/src/UltimaIII.Avalonia/Views/InventoryView.axaml
@@ -96,7 +96,7 @@
 
             <!-- Item List -->
             <Border Grid.Row="4" Padding="10,6" MinHeight="150">
-                <ScrollViewer>
+                <ScrollViewer x:Name="ItemScrollViewer">
                     <ItemsControl ItemsSource="{Binding Items}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate DataType="{x:Type vm:InventoryItemViewModel}">
