--- a/src/UltimaIII.Avalonia/Views/GameView.axaml
+++ b/src/UltimaIII.Avalonia/Views/GameView.axaml
@@ -92,6 +92,15 @@
                 </ContentControl.ContentTemplate>
             </ContentControl>
 
+            <!-- Temple Display -->
+            <ContentControl Grid.Row="1" Content="{Binding TempleVm}" IsVisible="{Binding IsTempleMode}">
+                <ContentControl.ContentTemplate>
+                    <DataTemplate x:DataType="vm:TempleViewModel">
+                        <views:TempleView/>
+                    </DataTemplate>
+                </ContentControl.ContentTemplate>
+            </ContentControl>
+
             <!-- Inventory Display -->
             <ContentControl Grid.Row="1" Content="{Binding InventoryVm}" IsVisible="{Binding IsInventoryMode}">
                 <ContentControl.ContentTemplate>
